--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <h1>Популярные бренды</h1>
             <div class="brend-items">
                 <img src="/img/Puma.png" alt="">
-                <img src="/img/Adidas.png" alt="">
+                <img src="/img/Asics.png" alt="">
                 <img src="/img/Puma.png" alt="">
                 <img src="/img/Adidas.png" alt="">
                 <img src="/img/Asics.png" alt="">
@@ -51,7 +51,118 @@
         </section>
         <section class="new">
             <h1>Популярные бренды</h1>
+            <div class="tr">
+                <div class="tr-items">
+                    <img src="/img/tr1.png" alt="">
+                    <div class="text">
+                        <p>КРОССОВКИ NIKE X PSG AIR JORDAN 4 RETRO</p> 
+                    </div>
+                </div>
+                <div class="tr-items">
+                    <img src="/img/tr2.png" alt="">
+                    <div class="text">
+                        <p>КРОССОВКИ AMBUSH X NIKE AIR ADJUST FORCE</p> 
+                    </div>
+                </div>
+                <div class="tr-items">
+                    <img src="/img/tr3.png" alt="">
+                    <div class="text">
+                        <p>КРОССОВКИ NIKE M2K TEKNO</p> 
+                    </div>
+                </div>
+                <div class="tr-items">
+                    <img src="/img/tr4.png" alt="">
+                    <div class="text">
+                        <p>БОТИНКИ DELTA</p> 
+                    </div>
+                </div>
+                <div class="tr-items">
+                    <img src="/img/tr5.png" alt="">
+                    <div class="text">
+                        <p>ФУТБОЛЬНАЯ ОБУВЬ PUMA ULTRA FG</p> 
+                    </div>
+                </div>
+                <div class="tr-items">
+                    <img src="/img/tr6.png" alt="">
+                    <div class="text">
+                        <p>КРОССОВКИ NIKE AIR JORDAN 1 MID</p> 
+                    </div>
+                </div>
+                <div class="tr-items">
+                    <img src="/img/tr7.png" alt="">
+                    <div class="text">
+                        <p>КРОССОВКИ NIKE SB DUNK LOW X TRAVIS SCOTT</p> 
+                    </div>
+                </div>
+                <div class="tr-items">
+                    <img src="/img/tr8.png" alt="">
+                    <div class="text">
+                        <p>КРОССОВКИ NIKE AIR JORDAN 4 RETRO</p> 
+                    </div>
+                </div>
+                <div class="tr-items">
+                    <img src="/img/tr9.png" alt="">
+                    <div class="text">
+                        <p>КРОССОВКИ ADIDAS YEEZY 350 BOOST V2</p> 
+                    </div>
+                </div>
+            </div>
+            <hr>
+        </section>
+        <section class="par">
+            <h1>Партнёры</h1>
+            <div class="par-img">
+                <img src="/img/par1.png" alt="">
+                <img src="/img/par2.png" alt="">
+                <img src="/img/par3.png" alt="">
+                <img src="/img/par4.png" alt="">
+                <img src="/img/par5.png" alt="">
+            </div>
         </section>
     </main>
+    <footer>
+        <div class="first">
+            <div class="first-content">
+                <img src="../img/logos.png" alt="">
+            </div>
+            <div class="first-items">
+                <h2>О нас</h2>
+                <p>Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является 
+                стандартной "рыбой" для текстов на латинице с начала XVI века. </p>
+            </div>
+        </div>
+        <div class="second">
+            <div class="second-content">
+                <h2>Интернет магазин</h2>
+                <p>+7 (495) 544-57-70</p>
+                <p>+7 (495) 544-57-70</p> 
+            </div>
+            <div class="second-items">
+                <h2>Адрес магазина</h2>
+                <p>Москва, Каретный ряд, 8</p>
+            </div>
+        </div>
+        <div class="third">
+            <nav>
+                <ul>
+                    <li><a href="">Главная</a></li>
+                    <li><a href="">Бренды</a></li>
+                    <li><a href="">Обувь</a></li>
+                    <li><a href="">Отзывы</a></li>
+                </ul>
+            </nav>
+        </div>
+        <div class="fourth">
+            <div class="fourth-content">
+                <h2>Мы в соц сетях</h2>
+                <p>Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является 
+                стандартной "рыбой" для текстов на латинице с начала XVI века. </p>
+            </div>
+            <div class="fourth-items">
+                <img src="/img/YouTube.png" alt="">
+                <img src="/img/Vk.png" alt="">
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
